static/css/base.css
html {
    height: 100%;
    scroll-behavior: smooth;
}

body {
    font-family: 'Red Hat Mono', monospace;
    padding-top: 164px;
}

main {
    padding-bottom: 215px;
}

/* ------------------ Navigation Bar, Page and Footer */

.index-bg {
    background: url('/media/homepage-image.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
}

.text-white {
    color: #C8C8C8 !important;
}

.main-bg {
    background-color: #6F1D1B;
}

.nav-bg {
    background-color: #631918;
    margin-right: 1.5em;
    padding: 0.5em;
}

.yellow-bg {
    background-color: #866209;
}

.footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
}

.copyright {
    font-size: x-small;
}

/* ------------------ Body */

.ft-sm {
    font-size: 14px !important;
    font-family: 'Lato', sans-serif !important;
}

.ft-md {
    font-size: 16px !important;
}

/* ------------------ Cards */

.card-img-top {
    width: 100%;
    height: 25vh;
    object-fit: cover;
}

/* ------------------ Buttons */

.update-link,
.remove-item {
    cursor: pointer;
}

/* ------------------ Allauth Forms */

.allauth-form-inner-content {
    margin-top: 1.5rem;
}

